creating one controller for all four tracking pages, creating api routing for all four tracking pages generate mongo script to add four collections for tracking pages

--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -2,9 +2,9 @@ html
   body
     .main-wrapper
       .main
-        section#nmis_list(ng-controller='TotalsCtrl')
+        section#nmis_list
           .inner
-            h3 LGA PROGRESS:&nbsp;
+            h3 {{title}}:&nbsp;
             .guidance 
             .filler
             .table-header-wrapper
