--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -4,6 +4,8 @@ html
       .main
         section#nmis_list
           .inner
+            label.search Search
+              input(ng-model="progressSearch", type="search")
             h3 {{title}}:&nbsp;
             .guidance 
             .filler
@@ -32,7 +34,7 @@ html
             .table-wrapper
               table.table
                 tbody
-                  tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:nmisHealthSearch')
+                  tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:progressSearch')
                     td {{totalDatum.lga_id}}
                     td {{totalDatum.state}}
                     td {{totalDatum.lga}}
