--- a/views/partials/state.jade
+++ b/views/partials/state.jade
@@ -17,6 +17,9 @@ html
                       a.hover(ng-click = "predicate = 'state'; reverse = true") STATE
                       i.carrot.icon-chevron-down(ng-show = "predicate == 'state'")
                     th
+                      a.hover(ng-click = "predicate = 'zone'; reverse = true") ZONE
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'zone'")
+                    th
                       a.hover(ng-click = "predicate = 'edu_pctfinished'; reverse = true") % Finished (EDUCATION)
                       i.carrot.icon-chevron-down(ng-show = "predicate == 'edu_pctfinished'")
                     th
@@ -30,6 +33,7 @@ html
                 tbody
                   tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:progressSearch')
                     td {{totalDatum.state}}
+                    td {{totalDatum.zone}}
                     td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
                     td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
                     td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
