--- a/views/partials/state.jade
+++ b/views/partials/state.jade
@@ -1,43 +1,40 @@
-html
-  body
-    .main-wrapper
-      .main
-        section#nmis_list
-          .inner
-            label.search Search
-              input(ng-model="progressSearch", type="search")
-            h3 {{title}}:&nbsp;
-            .guidance 
-            .filler
-            .table-header-wrapper
-              table.table
-                thead
-                  tr
-                    th
-                      a.hover(ng-click = "predicate = 'state'; reverse = true") STATE
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'state'")
-                    th
-                      a.hover(ng-click = "predicate = 'zone'; reverse = true") ZONE
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'zone'")
-                    th
-                      a.hover(ng-click = "predicate = 'edu_pctfinished'; reverse = true") % Finished (EDUCATION)
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'edu_pctfinished'")
-                    th
-                      a.hover(ng-click = "predicate = 'health_pctfinished'; reverse = true") % Finished (HEALTH)
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'health_pctfinished'")
-                    th
-                      a.hover(ng-click = "predicate = 'pctfinished'; reverse = true") % Finished (TOTAL)
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'pctfinished'")
-            .table-wrapper
-              table.table
-                tbody
-                  tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:progressSearch')
-                    td {{totalDatum.state}}
-                    td {{totalDatum.zone}}
-                    td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
-                    td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
-                    td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
-  script
-    $('body, .main-wrapper, .main, .inner').css('height', 'auto');
-    $('.main').css('width','100%');
+extends navbar_progress
+block main
+  .main-wrapper
+    .main
+      section#nmis_list
+        .inner
+          label.search Search
+            input(ng-model="progressSearch", type="search")
+          h3 {{title}}:&nbsp;
+          .guidance 
+          .filler
+          .table-header-wrapper
+            table.table
+              thead
+                tr
+                  th
+                    a.hover(ng-click = "predicate = 'state'; reverse = true") STATE
+                    i.carrot.icon-chevron-down(ng-show = "predicate == 'state'")
+                  th
+                    a.hover(ng-click = "predicate = 'zone'; reverse = true") ZONE
+                    i.carrot.icon-chevron-down(ng-show = "predicate == 'zone'")
+                  th
+                    a.hover(ng-click = "predicate = 'edu_pctfinished'; reverse = true") % Finished (EDUCATION)
+                    i.carrot.icon-chevron-down(ng-show = "predicate == 'edu_pctfinished'")
+                  th
+                    a.hover(ng-click = "predicate = 'health_pctfinished'; reverse = true") % Finished (HEALTH)
+                    i.carrot.icon-chevron-down(ng-show = "predicate == 'health_pctfinished'")
+                  th
+                    a.hover(ng-click = "predicate = 'pctfinished'; reverse = true") % Finished (TOTAL)
+                    i.carrot.icon-chevron-down(ng-show = "predicate == 'pctfinished'")
+          .table-wrapper
+            table.table
+              tbody
+                tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:progressSearch')
+                  td {{totalDatum.state}}
+                  td {{totalDatum.zone}}
+                  td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
+                  td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
+                  td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
 
