--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -177,14 +177,23 @@ table, .table{
     &:first-child{
       width: 55px; }
     &:nth-child(2){
-      width: 6%;}
+      width: 9%;}
     &:nth-child(3){
       width: 15%;}
     &:nth-child(4){
-      width: 29%;}
+      width: 26%;}
     &:nth-child(5){
       width: 16%;} }
   tbody tr{
+    &.finished{
+      background-color: #bbd7b4;
+    }
+    &.inprogress{
+      background-color: #e6e4b9;
+    }
+    &.notstarted{
+      background-color: #e9bebe;
+    }
     &:hover{
     background-color: #dddddd;
       .btn-nomatch{
