--- a/views/index.jade
+++ b/views/index.jade
@@ -8,4 +8,5 @@ block body
   script(src='js/services.js')
   script(src='js/app.js')
   script(src='js/front.js')
+  script(src='js/lib/zlib.min.js')
 
